gccida/g0/df_insn_refs_record
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_insn_refs_record/src/df.c:1678:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note = insn[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                                    ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_insn_refs_record/src/df.c:1681:70: error: use of undeclared identifier 'df_ref_flags'
df_uses_record( df_0, ( rtx *)note->fld, DF_REF_REG_USE, bb, insn, ( df_ref_flags)0); 
                                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_insn_refs_record/src/df.c:1686:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note_0 = ( rtx)insn[4]; note_0; note_0 = ( rtx)note_0[1] ) 
                     ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_insn_refs_record/src/df.c:1686:54: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note_0 = ( rtx)insn[4]; note_0; note_0 = ( rtx)note_0[1] ) 
                                                     ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_insn_refs_record/src/df.c:1689:89: error: use of undeclared identifier 'df_ref_flags'
df_uses_record( df_0, ( rtx *)( note_0->fld[0].rtwint + 8), DF_REF_REG_USE, bb, insn, ( df_ref_flags)0); 
                                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_insn_refs_record/src/df.c:1692:64: error: use of undeclared identifier 'df_ref_flags'
df_uses_record( df_0, ( rtx *)fld, DF_REF_REG_USE, bb, insn, ( df_ref_flags)0); 
                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_insn_refs_record/src/df.c:1700:63: error: use of undeclared identifier 'df_ref_flags'
df_uses_record( df_0, ( rtx *)v4, DF_REF_REG_USE, bb, insn, ( df_ref_flags)0); 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_insn_refs_record/src/df.c:1705:69: error: use of undeclared identifier 'df_ref_flags'
df_uses_record( df_0, ( rtx *)&insn[2], DF_REF_REG_USE, bb, insn, ( df_ref_flags)0); 
                                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_insn_refs_record/src/df.c:1719:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note_1 = ( rtx)insn[4]; note_1; note_1 = ( rtx)note_1[1] ) 
                     ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_insn_refs_record/src/df.c:1719:54: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note_1 = ( rtx)insn[4]; note_1; note_1 = ( rtx)note_1[1] ) 
                                                     ^~~~~~~~~
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_insn_refs_record/src/obj/df.o] Error 1
